@@ -1,6 +1,7 @@
 ﻿using System;
 using System.Collections;
 using System.Collections.Generic;
+using System.IO;
 using LightBDD.Core.Configuration;
 using LightBDD.Core.Reporting;
 using LightBDD.Framework.Reporting.Formatters;
@@ -15,12 +16,12 @@ namespace LightBDD.Framework.Reporting.Configuration
         private readonly List<IReportWriter> _writers = new List<IReportWriter>();
 
         /// <summary>
-        /// Default constructor initializing configuration to generate <c>~\\Reports\\FeaturesReport.xml</c> and <c>~\\Reports\\FeaturesReport.html</c> reports.
+        /// Default constructor initializing configuration to generate <c>~\\Reports\\FeaturesReport.xml</c>(Win) <c>~/Reports/FeaturesReport.xml</c>(Unix) and <c>~\\Reports\\FeaturesReport.html</c>(Win) <c>~/Reports/FeaturesReport.html</c>(Unix) reports.
         /// </summary>
         public ReportWritersConfiguration()
         {
-            Add(new ReportFileWriter(new XmlReportFormatter(), "~\\Reports\\FeaturesReport.xml"));
-            Add(new ReportFileWriter(new HtmlReportFormatter(), "~\\Reports\\FeaturesReport.html"));
+            Add(new ReportFileWriter(new XmlReportFormatter(), "~" + Path.DirectorySeparatorChar + "Reports" + Path.DirectorySeparatorChar + "FeaturesReport.xml"));
+            Add(new ReportFileWriter(new HtmlReportFormatter(), "~" + Path.DirectorySeparatorChar + "Reports" + Path.DirectorySeparatorChar + "FeaturesReport.html"));
         }
 
         /// <summary>
