@@ -5,8 +5,10 @@ Version 2.3.1
 ----------------------------------------
 Summary:
 + #73 Fixed "Tests accessing Application Settings fails on NET45x with SerializationException: TestContextProvider is not marked as serializable"
++ #87 Fixed directory separator for Unix systems
 Details:
 + #73 (Framework)(Fix) Corrected AsyncLocalContext<T> in LightBDD targeting NET45x to marshal stored context by ref when transferring it between domains
++ #87 (Framework)(Fix) Use the System.IO.Path.DirectorySeparatorChar in file paths to match Unix and Win paths
 
 Version 2.3.0
 ----------------------------------------
